client/src/styles/header.css
.header {
  width: 100%;
  display: flex;
  padding: 0.5rem 3rem;
  align-items: center;
  justify-content: space-between;
}

.navbar-icons {
  display: flex;
  align-items: center;
}

.navbar-icon {
  color: var(--clr-accent);
  margin-right: 2rem;
}

/* Hide the cart icon in header on screens smaller than 1000px */
@media (max-width: 1000px) {
  .navbar-icon,
  .navbar-badge {
    display: none;
    margin-right: none;
  }

  .header {
    padding: 0.5rem 1em;
  }
}

.menu-icon {
  color: var(--clr-accent);
}

